--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Michigan and have moved all over the country</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I play board games, whitewater kayak, mountain bike, etc.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>dont know yet</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Michigan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To make that cheddar</p>
     </section>
 
     <footer id="footer">
